# AgentShop

./: crawler.ipynb  packages.txt  pyproject.toml  requirements.txt
streamlit/crawler/: app.py  utils.py
